# dav-office-portal

./: Cargo.toml  Dockerfile  README.md  build.sh
src/: config.rs  dav.rs  file_jwt.rs  main.rs  metrics.rs  oidc.rs  onlyoffice.rs  routes.rs  session.rs
src/templates/: browser.html  editor.html
